right sidebar: Prevent hover bg from overlapping scrollbar.
This prevents the colored background that shows when hovering over
a user in the right sidebar from overlapping the right sidebar
scrollbar, by adding a width to the username line items.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -30,6 +30,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    width: 90%;
 }
 
 #user_presences li,
